k8s/tsdd/zhongyihui/wk/wk-wss-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wss-zyh-cyou-ingress
  namespace: zyh
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - wss.zhongyihui.cc
    secretName: wss-zhongyihui-cc-tls
  rules:
  - host: wss.zhongyihui.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zyh-wk-svc
            port:
              number: 5200
